delete note, fix z-index of header

--- a/program/static/base/base.css
+++ b/program/static/base/base.css
@@ -8,6 +8,7 @@ header{
     left: 0;
     top: 0;
     background-color: white;
+    z-index: 1;
 
     .dropdown {
         a {
